<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

    <ImageView
        android:id="@+id/mainactivity_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/dog_pictures"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_textView_diashowSpeedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/black" />

    <Switch
        android:id="@+id/mainactivity_switch_securerandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:checked="false"
        android:minHeight="48dp"
        android:text="@string/secure_random"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/mainactivity_switch_diashow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:minHeight="48dp"
        android:text="@string/Slideshow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/mainactivity_textView_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mainactivity_imageView"
        app:layout_constraintEnd_toEndOf="@+id/mainactivity_imageView"
        app:layout_constraintStart_toStartOf="@+id/mainactivity_imageView"
        app:layout_constraintTop_toTopOf="@+id/mainactivity_imageView" />

    <SeekBar
        android:id="@+id/mainactivity_seekBar_diashowSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:max="10"
        android:min="1"
        android:minHeight="30dp"
        android:progress="5"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_switch_diashow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mainactivity_textView_diashowSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/slideshow_speed"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_seekBar_diashowSpeed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mainactivity_textView_diashowSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mainactivity_seekBar_diashowSpeed"
        app:layout_constraintStart_toEndOf="@+id/mainactivity_textView_diashowSpeedText" />

</androidx.constraintlayout.widget.ConstraintLayout>